<resources>
    <string name="app_name">RemMe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="taskTitle">Task Title</string>
    <string name="dateTime"><![CDATA[Date & Time]]></string>
    <string name="createdAt">"Created at : "</string>
    <string name="channel_name">Task Reminder Channel</string>
    <string name="channel_description">Channel for task reminders</string>
    <string name="completed">Mark As Completed</string>
    <string name="mark_as_incomplete">Mark as Incomplete</string>
    <string name="mark_as_completed">Mark as Completed</string>
    <string name="tasks">Tasks</string>
    <string name="welcome">Welcome to RemMe !</string>
    <string name="count">0</string>
    <string name="total_tasks">Total Tasks</string>
    <string name="completed_tasks">Completed Tasks</string>
    <string name="see_tasks">See Tasks</string>
</resources>